# demucs-karaoke-app

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  DEMUCS.md  README.md  SCHEMA.md  TASKS.md  config.py  database.py  demucs_svc.sh  insert_queue_test.sql  logging_config.py  main.py  models.py  pyproject.toml
.github/agents/: frontend-design.agent.md
.github/skills/demucs_pc/: SKILL.md
.github/skills/git_operations/: SKILL.md
.github/skills/lrc_files/: SKILL.md
adapters/: ffmpeg.py  ytdlp.py
demucs_svc/: __init__.py  app.py  demucs_runner.py  models.py  settings.py
docs/: API.md  sync-playback-analysis.md  web-lyrics-customization-handoff.md
lyrics/: REPORT.md  karaoke_titles.py  metadata_parser.py  netease_search.py
routes/: media_files.py  pages.py  qr.py  queue.py  search.py  settings.py
scripts/: lyrics_debug_cli.py  lyrics_inference_cli.py
services/: demucs_client.py  karaoke_service.py  lyrics_inference.py  lyrics_providers.py  lyrics_service.py  queue_service.py  runtime_settings_service.py  websocket_manager.py  youtube_service.py
skills/git_operations/: SKILL.md
static/: media_management.js  queue.js  settings.js  style.css
templates/: base.html  media_management.html  playback.html  queue.html  settings.html  stage.html
tests/: conftest.py  test_demucs_svc.py  test_ffmpeg_adapter.py  test_logging.py  test_lyrics_debug_cli.py  test_lyrics_inference_cli.py  test_routes.py  test_services.py  test_ytdlp_adapter.py
